made articles responsive with flexbox

--- a/about-us.html
+++ b/about-us.html
@@ -39,31 +39,51 @@
 
     </nav>
 
-
-
+    <div class="about-us-gap"></div>
 
 
     <main>
-        <div class="about-us-shadow">
-            <img src="/images/volunteer.jpg" alt="volunteer">
-            <h2><u class="u">ABOU</u>T US</h2>
-            <p>The Heart and Soul Foundation is a registered Non-Profit Company established in 2021 to address the needs
-                of disadvantaged, underserved, and underprivileged children, and individuals of all ages from Quellerie
-                Park, Burgershoop, Apple Park and Krugersdorp West in Gauteng.</p>
+        <div class="test">
 
-            <p>Our mission is to create sustainable solutions that uplift and empower these communities through
-                various initiatives such as education, healthcare, social welfare, and community development programs.
-                The Heart and Soul Foundation recognizes the importance of addressing the root causes of poverty and
-                inequality in these areas, and aims to work collaboratively with other organizations and stakeholders to
-                bring about positive change. Through their efforts, they hope to improve the quality of life and
-                opportunities for those in need, and to build a brighter future for the communities they serve.</p>
-            <p>By providing support in key areas, the Heart and Soul Foundation aims to positively impact the lives of
-                those in disadvantaged communities. With a collaborative approach, they strive to create sustainable
-                solutions that empower individuals of all ages.</p>
+            <div>
+                <h3><span class="u">Abo</span>ut us</h3>
+                <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
+                    children,
+                    with the help of our donors and sponsors. To do this in a sustainable manner, we believe in
+                    excellent
+                    communication, leadership and human relations.</p>
 
+                <p> Through our different programs we will ensure the growth of individuals, participation, and pride in
+                    the
+                    community.</p>
+
+                <p>At the Heart and Soul Foundation, we recognize the significance of providing meals for both our
+                    preschool
+                    and after-school children, as well as the wider community. Our commitment is to ensure that basic
+                    needs
+                    are
+                    met daily. We are also committed to supporting individuals in their job search, empowering them
+                    towards
+                    upwards mobility and growth.</p>
+
+                <p>Our focus will also be on the elderly population in our community, specifically those residing in old
+                    age
+                    homes. We understand that older individuals face unique challenges and have distinct needs. As such,
+                    we
+                    will
+                    conduct regular evaluations of our programs for the elderly to ensure their specific needs are met
+                    effectively.</p>
+
+                <p>Whenever necessary, professionals from the community will provide counseling services to individuals
+                    who
+                    require support for issues related to substance abuse, gender-based violence, and family matters</p>
+
+                <p>Together we will make a difference.</p>
+            </div>
+            <div class="img-remove-mobile">
+                <img src="/images/volunteer.jpg" class="img">
+            </div>
         </div>
-
-
 
 
 
