--- a/index.html
+++ b/index.html
@@ -72,143 +72,134 @@
 
     <main>
 
-        <div class="mission-statement-shadow">
-            <img src="/images/painted_hands_heart.jpg" alt="mission_statement_image">
-            <h2><u class="u">Mission Stat</u>ement</h2>
+        <div class="test">
 
-            <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
-                children, with the help of our donors and sponsors. To do this in a sustainable manner, we believe in
-                excellent communication, leadership and human relations.</p>
-            <p>Through our different programs we will ensure the growth of individuals, participation, and pride in the
-                community.</p>
-            <p>At the Heart and Soul Foundation, we recognize the significance of providing meals for both our
-                preschool and after-school children, as well as the wider community. Our commitment is to ensure that
-                basic needs are met daily. We are also committed to supporting individuals in their job search,
-                empowering them towards upwards mobility and growth.</p>
-            <p>Our focus will also be on the elderly population in our community, specifically those residing in old age
-                homes. We understand that older individuals face unique challenges and have distinct needs. As such,
-                we will conduct regular evaluations of our programs for the elderly to ensure their specific needs are
-                met effectively.</p>
-            <p>Whenever necessary, professionals from the community will provide counseling services to individuals
-                who require support for issues related to substance abuse, gender-based violence, and family matters</p>
-            <p>Together we will make a difference. </p>
+            <div>
+                <h3><span class="u">Misson State</span>ment</h3>
+                <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
+                    children,
+                    with the help of our donors and sponsors. To do this in a sustainable manner, we believe in
+                    excellent
+                    communication, leadership and human relations.</p>
 
-        </div>
+                <p> Through our different programs we will ensure the growth of individuals, participation, and pride in
+                    the
+                    community.</p>
 
+                <p>At the Heart and Soul Foundation, we recognize the significance of providing meals for both our
+                    preschool
+                    and after-school children, as well as the wider community. Our commitment is to ensure that basic
+                    needs
+                    are
+                    met daily. We are also committed to supporting individuals in their job search, empowering them
+                    towards
+                    upwards mobility and growth.</p>
 
-        <h2 class="article-heading-how-we-help-children"><span class="u">READ OUR ARTI</span>CLES</h2>
+                <p>Our focus will also be on the elderly population in our community, specifically those residing in old
+                    age
+                    homes. We understand that older individuals face unique challenges and have distinct needs. As such,
+                    we
+                    will
+                    conduct regular evaluations of our programs for the elderly to ensure their specific needs are met
+                    effectively.</p>
 
+                <p>Whenever necessary, professionals from the community will provide counseling services to individuals
+                    who
+                    require support for issues related to substance abuse, gender-based violence, and family matters</p>
 
-
-        <div class="article-1-light-shadow">
-
-            <img src="/images/article_images/food_donations.jpg" class="article-1-picture" alt="food_donations">
-            <h4 class="article-title">Food donations</h4>
-            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
-                helping those in need by providing
-                food support to the children and elderly people in our care. There are many reasons why donating
-                food
-                to our organization is a worthwhile...</p>
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="food-donations.html" class="link">Read More </a>
-                </i></h5>
-
-        </div>
-        <!-- article 2 -->
-
-        <div class="article-2-light-shadow">
-
-            <img src="/images/article_images/blankets.jpg" class="article-1-picture" alt="blanket">
-            <h4 class="article-title">Winter blanket run</h4>
-            <p class="article-2-paragraph-1">Winter can be an incredibly difficult time for many children,
-                particularly those from less privileged
-                backgrounds.
-            </p>
-            <p class="article-2-paragraph-2">As temperatures drop, these children may lack access to warm clothing
-                and blankets,
-                leaving them at risk of illness and discomfort...</p>
-
-
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="blanket-run.html" class="link">Read More </a>
-                </i></h5>
-        </div>
-
-        <!-- article 3 -->
-
-        <div class="article-3-light-shadow">
-
-            <img src="/images/article_images/golf.jpg" class="article-1-picture" alt="Golf Day">
-            <h4 class="article-title">2023 Golf day</h4>
-            <p class="article-3-paragraph-1">The 16th of May is an important day for our organization. We are
-                hosting a Golf day to raise funds for
-                our cause. Our organization is dedicated to providing a safe and nurturing environment for children
-                who
-                are in need.</p>
-            <p class="article-3-paragraph-2"></p>
-
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="golf-day.html" class="link">Read More </a>
-                </i></h5>
-
-            <div class="bottom-articles">
-                <!-- article 4 -->
-                <div class="article-4-light-shadow">
-
-                    <img src="/images/article_images/wallet.jpg" class="article-4-picture" alt="Empty_wallet">
-                    <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-                    <p class="article-4-paragraph-1">Poverty is a complex issue that affects millions of people
-                        worldwide. Our charity organization is committed to breaking the cycle of poverty by
-                        empowering communities and providing them...</p>
-                    <p class="article-4-paragraph-2"></p>
-
-
-
-                    <h5 class="article-1-readmore"><i>
-                            <a href="cycle-poverty.html" class="link">Read More </a>
-                        </i></h5>
-                </div>
-                <!-- article 5 -->
-
-                <div class="article-5-light-shadow">
-
-                    <img src="/images/donations.jpg" class="article-5-picture" alt="Donations">
-                    <h4 class="article-title">The power of donations</h4>
-                    <p class="article-5-paragraph-1">The act of donating, whether it's money or time, can have an
-                        incredibly powerful impact on both the recipient and the giver. Donations can help to create
-                        positive change in the world, whether it's in the form of supporting a charitable
-                        organization or helping an individual in need.</p>
-                    <p class="article-5-paragraph-2"></p>
-
-
-
-                    <h5 class="article-1-readmore"><i>
-                            <a href="donations.html" class="link">Read More </a>
-                        </i></h5>
-                </div>
-
-                <!-- article 6 -->
-
-                <div class="article-6-light-shadow">
-
-                    <img src="/images/article_images/community.jpg" class="article-6-picture" alt="Community">
-                    <h4 class="article-title">Making a difference in the community</h4>
-                    <p class="article-5-paragraph-1">At our charity organization, we are passionate about creating
-                        positive change in our local community. Through our programs and services, we strive to make
-                        a ...</p>
-
-
-
-
-                    <h5 class="article-1-readmore"><i>
-                            <a href="communities.html" class="link">Read More </a>
-                        </i></h5>
-                </div>
+                <p>Together we will make a difference.</p>
+            </div>
+            <div class="img-remove-mobile">
+                <img src="images/painted_hands_heart.jpg" class="img">
             </div>
         </div>
+        <h2 class="article-heading-how-we-help-children"><span class="u">READ OUR ARTI</span>CLES</h2>
+        <div class="flex-container-one">
+
+            <div class="item">
+                <img src="images/article_images/food_donations.jpg">
+                <h3>FOOD DONATIONS</h3>
+                <p>The Heart and Soul Foundation is an organization that is dedicated to helping those in need by
+                    providing
+                    food support to the children and elderly people in our care. There are many reasons why donating
+                    food to
+                    our organization is a worthwhile...</p>
+
+                <a href="food-donations.html" class="link readmore">
+                    <p>Read More </p>
+                </a>
+
+            </div>
+            <div class="item">
+                <img src="images/article_images/blankets.jpg">
+
+                <h3>Winter blanket run</h3>
+                <p>Winter can be an incredibly difficult time for many children, particularly those from less privileged
+                    backgrounds.</p>
+
+                <p>As temperatures drop, these children may lack access to warm clothing and blankets, leaving them at
+                    risk
+                    of illness and discomfort...
+
+                </p>
+                <a href="blanket-run.html" class="link readmore">
+                    <p>Read More </p>
+                </a>
+            </div>
+            <div class="item ">
+                <img src="/images/article_images/golf.jpg">
+
+                <h3>2023 Golf Day</h3>
+                <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds
+                    for
+                    our cause. Our organization is dedicated to providing a safe and nurturing environment for children
+                    who
+                    are in need.</p>
+
+                <a href="golf-day.html" class="link readmore">
+                    <p>Read More </p>
+                </a>
+            </div>
+
+            <div class="item bottom-3">
+                <img src="/images/article_images/wallet.jpg">
+
+                <h3>Empowering communities to break the cycle of poverty</h3>
+                <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                    committed to breaking the cycle of poverty by empowering communities and providing them...</p>
+
+                <a href="cycle-poverty.html" class="link readmore">
+                    <p>Read More </p>
+                </a>
+            </div>
+
+            <div class="item bottom-3">
+                <img src="images/donations.jpg">
+
+                <h3>The power of donations</h3>
+                <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
+                    recipient and the giver. Donations can help to create positive change in the world, whether it's in
+                    the
+                    form of supporting a charitable organization or helping an individual in need.</p>
+
+                <a href="donations.html" class="link readmore">
+                    <p>Read More </p>
+                </a>
+            </div>
+            <div class="item bottom-3">
+                <img src="/images/article_images/community.jpg">
+
+                <h3>Making a difference in the community</h3>
+                <p>At our charity organization, we are passionate about creating positive change in our local community.
+                    Through our programs and services, we strive to make a ...</p>
+                <a href="communities.html" class="link readmore">
+                    <p>Read More </p>
+                </a>
+            </div>
+
+        </div>
+
+
     </main>
     <!--___________________________________________footer_____________________________________-->
     <div class="footer-gap">
@@ -220,7 +211,7 @@
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
                 <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">opperman.estelle@gmail.com </p>
+                <p class="und-footer">opperman.estelle@gmail.com &nbsp; Estelle Opperman </p>
 
 
             </div>
